sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:53: error: not found: value bonjoueurDroite
  while(!bonjoueurDroite(col)){
         ^SelectBaseball:54: error: not found: value b
    deplace(b+1,0)
            ^SelectBaseball:60: error: not found: value getCouleur
  if (getCouleur(b+1,0)==col || getCouleurJoueur(b+1,1)==col){
      ^